Added weekday param to days
